test(prove): Test that prove sets profile.keyID to satisfy keystore

--- a/config/testdata/simple.yaml
+++ b/config/testdata/simple.yaml
@@ -10,6 +10,7 @@ Profile:
   email: ""
   homeurl: ""
   id: QmU27VdAEUL5NGM6oB56htTxvHLfcGZgsgxrJTdVr2k4zs
+  keyid: ""
   name: ""
   peername: test_peername
   photo: ""
