fix(oas): add open api spec tests to CI and makefile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,10 @@ jobs:
           command: |
             trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
             make test | tee ${TEST_RESULTS}/go-test.out
+      - run:
+          name: Run OAS Spec Tests
+          command: |
+            cd docs && go test ./...
       - save_cache:
           key: dependency-cache-{{ checksum "go.sum" }}
           paths:
