--- a/config/migrate/testdata/two_to_three/qri_config.yaml
+++ b/config/migrate/testdata/two_to_three/qri_config.yaml
@@ -13,7 +13,7 @@ CLI:
   colorizeoutput: true
 Filesystems:
 - config:
-    path: /Users/test/.qri/ipfs
+    path: ./ipfs
   type: ipfs
 - type: local
 - type: http
