--- a/config/testdata/simple.yaml
+++ b/config/testdata/simple.yaml
@@ -21,7 +21,7 @@ Profile:
   updated: "2009-02-13T23:31:30Z"
 RPC: null
 Registry: null
-Remote: null
+RemoteServer: null
 Remotes: null
 Repo: null
 Revision: 4
