docs(api): support examples from source comments, more comment support
comments in the lib package have two new rules:
* comments can have at most one semicolon, which separates comments into
  [description];[example] sections
* a single example value is now supported when prefixed with 'e.g.',
  example values should match their syntax type (string examples should
  be "quoted", boolean examples should be true, numeric should be 2.145)

--- a/docs/api_doc_template.yaml
+++ b/docs/api_doc_template.yaml
@@ -3,11 +3,19 @@ info:
   title: Qri API
   description: Qri API used to communicate with a Qri node.
   version: {{ .QriVersion }}
+tags:
+{{- range .MethodSets }}
+{{- if gt .MethodCount 0}}
+- name: {{ .Name }}
+  description: "{{ .Doc }}"
+{{ end -}}
+{{ end -}}
 paths:
 {{- range .LibMethods }}
 {{- if .Endpoint }}
   '{{ .Endpoint }}':
     {{ .HTTPVerb }}:
+{{ if .Doc }}      description: {{ .Doc }}{{end}}
       operationId: '{{ .MethodSet }}.{{ .MethodName }}'
       tags:
       - {{ .MethodSet }}
@@ -112,6 +120,7 @@ components:
 {{ if .TypeIsCommon }}          type: {{ .Type }}{{ end }}
 {{ if not .TypeIsCommon }}          type: object{{ end }}
 {{ if ne .Doc "" }}          description: "{{ .Doc }}"{{ end }}
+{{ if ne .Example "" }}          example: "{{ .Example }}"{{ end }}
 {{- end }}
 {{- end }}
 ### Response Schemas
