chore(docs): "docs" tag on struct fields control documentation
currently only support `docs:"hidden"` to set a struct field to hidden
within documentation parsing, but we can expand with comma,separated,lists
in docs struct tags for added functionality relating to documentation

--- a/docs/api_doc_template.yaml
+++ b/docs/api_doc_template.yaml
@@ -23,11 +23,13 @@ paths:
       {{- if eq .Params.Name "pathParams" }}
 {{ if .Params.Fields }}      parameters: {{end}}
 {{- range .Params.Fields }}
+{{- if not .Hidden }}
       - name: '{{ .Name }}'
         in: path
         required: true
         schema:
           type: string
+{{ end -}}
 {{ end -}}
       {{ end }}
       {{ end -}}
@@ -116,11 +118,13 @@ components:
       type: object
 {{ if .Fields }}      properties: {{end}}
         {{- range .Fields }}
+        {{ if not .Hidden }}
         {{ .Name }}:
 {{ if .TypeIsCommon }}          type: {{ .Type }}{{ end }}
 {{ if not .TypeIsCommon }}          type: object{{ end }}
 {{ if ne .Doc "" }}          description: "{{ .Doc }}"{{ end }}
 {{ if ne .Example "" }}          example: "{{ .Example }}"{{ end }}
+{{- end }}
 {{- end }}
 {{- end }}
 ### Response Schemas
